modul 1.2 demo kode

--- a/Modul 1/Js-intro, Variabler, syntax/index.html
+++ b/Modul 1/Js-intro, Variabler, syntax/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.js"></script>
+    <!-- <script src="./intro.js"></script> -->
+    <!-- <script src="./alert.js"></script> -->
+    <!-- <script src="./prompt.js"></script> -->
+    <!-- <script src="./null+undefined.js"></script> -->
 </head>
 <body style="background-color: black;">
+    <p id="info" style="color: white;">Informasjon!</p>
+    
+    <div id="divTest">
+        <h1>Tst</h1>
+        <p>Dette er kun en test</p>
+    </div>
+    <script src="./document.js"></script>
 </body>
 </html>
