modul 1 html fil update

--- a/Modul 1/Js-intro, Variabler, syntax/index.html
+++ b/Modul 1/Js-intro, Variabler, syntax/index.html
@@ -11,11 +11,7 @@
 </head>
 <body style="background-color: black;">
     <p id="info" style="color: white;">Informasjon!</p>
-    
-    <div id="divTest">
-        <h1>Tst</h1>
-        <p>Dette er kun en test</p>
-    </div>
-    <script src="./document.js"></script>
+
+    <!-- <script src="./document.js"></script> -->
 </body>
 </html>
