string funksjoner & konvertering av tekst til tall

--- a/Modul 2/index.html
+++ b/Modul 2/index.html
@@ -7,6 +7,9 @@
     <script src="./logicalOperators.js"></script>
     <script src="./if, else, else-if.js"></script>
     <script src="./switch.js"></script>
+     <script src="./parseInt&Float.js"></script>
+     <script src="./UpperLowerCase.js"></script>
+     <script src="./stringFunctions.js"></script>
 </head>
 <body style="background-color: black;">
 </body>
