--- a/Modul 3/Smoothie/index.html
+++ b/Modul 3/Smoothie/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./functions.js"></script>
-    <script src="./events.js"></script>
-    <script src="./parameter.js"></script>
+    <script src="./index.js"></script>
 </head>
-<body style="background-color: black; color: white">
+<body>
     
 </body>
 </html>
