For loops varianter

--- a/Modul 4/loops and arrays/index.html
+++ b/Modul 4/loops and arrays/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="./for-loops.js"></script> -->
-    <!-- <script src="./while-loops.js"></script> -->
+    <script src="./for-loops.js"></script>
+    <script src="./for-loops-varianter.js"></script>
+    <script src="./while-loops.js"></script>
 </head>
 <body style="background-color: black; color: white">
     <h1>Handleliste</h1>
